--- a/index.html
+++ b/index.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <title>Odin | Landing Page</title>
 </head>
+
 <body>
     <div class="main">
-        <div class="hero-container"></div>
-        <div class="random-container"></div>
+        <div class="hero-container">
+            <div class="nav-main">
+                <div class="header-logo">Header Logo</div>
+                <ul class="header-links">
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </div>
+            <div class="hero">
+                <div class="left">
+                    <span class="hero-title">This website is awesome</span>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the
+                        color is lower contrast</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="right">
+                    <img src="https://placehold.co/600x250" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="random-container">
+            <div class="random-title">
+                Some random information.
+            </div>
+            <div class="random-cards">
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="card">
+                    <img src="https://placehold.co/150x150" alt="">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
         <div class="quotes-container"></div>
         <div class="call-to-action-container"></div>
         <div class="footer-container"></div>
     </div>
 </body>
+
 </html>
