--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button>Sign up</button>
                 </div>
                 <div class="right">
-                    <img src="https://placehold.co/600x250" alt="">
+                    <img src="https://placehold.co/600x250">
                 </div>
             </div>
         </div>
@@ -37,24 +37,27 @@
             </div>
             <div class="random-cards">
                 <div class="card">
-                    <img src="https://placehold.co/150x150" alt="">
+                    <img src="https://placehold.co/150x150">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="card">
-                    <img src="https://placehold.co/150x150" alt="">
+                    <img src="https://placehold.co/150x150">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="card">
-                    <img src="https://placehold.co/150x150" alt="">
+                    <img src="https://placehold.co/150x150">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="card">
-                    <img src="https://placehold.co/150x150" alt="">
+                    <img src="https://placehold.co/150x150">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </div>
-        <div class="quotes-container"></div>
+        <div class="quotes-container">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <b class="thor">-Thor, God of Thunder</b>
+        </div>
         <div class="call-to-action-container"></div>
         <div class="footer-container"></div>
     </div>
