--- a/index.html
+++ b/index.html
@@ -55,12 +55,24 @@
             </div>
         </div>
         <div class="quotes-container">
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up
+                space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <b class="thor">-Thor, God of Thunder</b>
         </div>
-        <div class="call-to-action-container"></div>
-        <div class="footer-container"></div>
+        <div class="call-to-action-container">
+            <div class="CTA-container">
+                <div class="CTA-text">
+                    <p>Call to action! It's time!</p>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="sign-up">
+                    Sign up
+                </button>
+            </div>
+        </div>
+        <div class="footer-container">
+            <p>Copyright &copy; The Odin Project 2021</p>
+        </div>
     </div>
 </body>
-
 </html>
